--- a/client/desktop.html
+++ b/client/desktop.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all-neptune.css" />
     <script type="text/javascript" src="extjs/ext-all-dev.js"></script>
     <script type="text/javascript" src="extjs/ext-theme-neptune.js"></script>
-    <script type="text/javascript" src="extjs/locale/ext-lang-fr.js"></script>
+    <script type="text/javascript" src="extjs/locale/ext-lang-fr.js" charset="UTF-8"></script>
 
 
     <!--<script type="text/javascript" src="tools/include-ext.js"></script>-->
