- ajout d'un module core contenant les modules essentiels à l'application - deplacement du module desktop dans le module core

--- a/client/desktop.html
+++ b/client/desktop.html
@@ -22,7 +22,7 @@
         </script>
         <script type="text/javascript">
             Ext.Loader.setPath({
-                'Ext.ux.desktop': 'modules/desktop',
+                'Ext.ux.desktop': 'modules/core/desktop',
                 MyDesktop: ''
             });
 
